# tree-sitter-dash

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dash.pc.in
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  literals.txt  statements.txt  types.txt
test/highlight/: builtin.ds  functions.ds  keywords.ds  types.ds
