[package]
name = "tree-sitter-dash"
description = "Tree sitter grammar for the Dash programming language"
version = "0.0.1"
authors = ["Henrik Nordgren <me@chkn.ch>"]
license = "None"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dash"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/chk-n/dash"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
