[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-dash"
description = "Tree sitter grammar for the Dash programming language"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "dash"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Henrik Nordgren", email = "me@chkn.ch" }]
requires-python = ">=3.9"
license.text = "None"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/chk-n/dash"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
